# MCP_Scanner

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_RELEASE_CHECKLIST.md  INSTALLATION.md  LICENSE  NETWORK_INVESTIGATION.md  PHASE_2_6_CLOSURE_REPORT.md  PHASE_3_0_PLAN.md  README.md  READY_FOR_TESTING.md  RELEASE_NOTES_v2.5.0.md  SESSION_2_UPDATE.md  SESSION_SUMMARY.md  TEST_EXECUTION_PLAN.md  VIDEO_SCRIPTS.md  run_phase_2_6_closure.sh
.github/workflows/: ci.yml
docs/: CHEATSHEET.md  CLI_REFERENCE.md  QA_CHECKLIST.md  README.md  RUNTIME_PROXY_ARCHITECTURE.md
mcp-sentinel-clone/: Cargo.toml  README.md
mcp-sentinel-clone/src/: lib.rs  main.rs  proxy.rs  scanner.rs  semantic.rs
mcp-sentinel-clone/src/detectors/: command_injection.rs  mod.rs  prompt_injection.rs  secrets.rs  sensitive_file_access.rs
mcp-sentinel-clone/src/models/: mod.rs  vulnerability.rs
mcp-sentinel-clone/src/output/: json.rs  mod.rs  sarif.rs  terminal.rs
mcp-sentinel-clone/src/srcs/models/: config.rs
mcp-sentinel-clone/tests/: scan_integration_test.rs
src/: config.rs  error.rs  lib.rs  main.rs  main.rs.tmp.1819.1761399799874  scanner.rs
src/cli/: audit.rs  errors.rs  init.rs  mod.rs  monitor.rs  proxy.rs  rules.rs  scan.rs  types.rs  whitelist.rs
src/detectors/: anomalies.rs  code_vulns.rs  mcp_config.rs  mcp_tools.rs  mod.rs  package_confusion.rs  pii.rs  prompt_injection.rs  secrets.rs  tool_poisoning.rs  toxic_flows.rs
src/engines/: ai_analysis.rs  mod.rs  semantic.rs  semgrep.rs
src/engines/ai_analysis/: mod.rs
src/engines/runtime_proxy/: mod.rs
src/engines/static_analysis/: mod.rs  patterns.rs
src/models/: config.rs  mcp_protocol.rs  mod.rs  scan_result.rs  vulnerability.rs
src/output/: html.rs  json.rs  mod.rs  pdf.rs  sarif.rs  terminal.rs
src/providers/: anthropic.rs  azure.rs  cohere.rs  google.rs  huggingface.rs  mod.rs  ollama.rs  openai.rs
src/storage/: baseline.rs  cache.rs  mod.rs
src/suppression/: auditor.rs  matcher.rs  mod.rs  parser.rs
src/threat_intel/: mitre_attack.rs  mod.rs  nvd.rs  vulnerable_mcp.rs
src/utils/: config.rs  crypto.rs  file.rs  git.rs  github.rs  http.rs  mod.rs
tests/: integration_phase_2_5.rs  integration_phase_2_6.rs
