[package]
name = "mcp-sentinel-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
lazy_static = "1.4.0"
colored = "2.0.0"
serde-sarif = "0.2.0"
serde_yaml = "0.9"
indicatif = "0.17"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
